Audiocapture: Fix setting QAudioEncoderSettings::bitRate

The sample size is now correctly calculated using provided bit rate via QAudioEncoderSettings.

The bit rate is calculated like
bitrate = sample size * sample rate * channel count

Fixed bug when sample size is 8 when bit rate and sample rate is 8000
which is not correct. The bit rate must be 8 * 8000.

Task-number: QTBUG-65207
Change-Id: I660fadfaaf6cc63004480fb84165252360b7f75e
Reviewed-by: Christian Stromme <christian.stromme@qt.io>